[package]
name = "tinympc"
version = "0.1.0"
edition = "2024"
authors = ["CharlesYang<cl.yang09@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/znode/tinympc"
description = "Rust port of TinyMPC"

[dependencies]
env_logger = "0.11"
log = "0.4.27"
nalgebra = { version = "0.33.2", features = ["rkyv-serialize"] }
